force-app/main/default/objects/MUSW__Complaint2__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Records</relationshipLabel>
    <relationshipName>Case_Records</relationshipName>
    <type>Lookup</type>
</CustomField>