force-app/main/default/objects/MUSW__Complaint2__c/fields/Issue_Number__c.field-meta.xml
<CustomField>
    <fullName>Issue_Number__c</fullName>
    <formula>IF( OR(ISNULL(MUSW__Issued_Number__c), MUSW__Issued_Number__c = "") 
,HYPERLINK("../"&amp;Id, Name, "_parent")&amp; " " &amp; HYPERLINK("/servlet/servlet.Integration?lid=01NF00000011RbY&amp;Id=" &amp; Id &amp; 
"&amp;ic=1&amp;object=MUSW__Complaint2__c&amp;type="&amp; TEXT( MUSW__Type__c )&amp;"&amp;year="&amp; TEXT(YEAR(TODAY()))&amp;"&amp;month="&amp; 
TEXT(MONTH(TODAY()))&amp;"&amp;day="&amp; TEXT(DAY(TODAY())), "(Issue)", "_parent"),HYPERLINK( "../"&amp;Id , Name,"_parent" ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Number</label>
    <type>Text</type>
</CustomField>