force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Origin__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Field Observation</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Police</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>