force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Reported By</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>PrimaryComplaint2s</relationshipName>
    <type>Lookup</type>
</CustomField>