force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Status__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Investigation In Progress</fullName>
            </value>
            <value>
                <fullName>Closed - No Action Taken</fullName>
            </value>
            <value>
                <fullName>Under Action</fullName>
            </value>
            <value>
                <fullName>Closed - Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>