force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Underage Service</fullName>
            </value>
            <value>
                <fullName>Serving without a License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>